style tweaks and bug fix for using first visible instance of target selector

--- a/less/pageguide.less
+++ b/less/pageguide.less
@@ -339,7 +339,7 @@
         position: absolute;
         text-align: center;
         width: 50px;
-        z-index: 5000;
+        z-index: 50000;
         .pg-opacity(100);
         min-height: 15px;
         max-height: 46px;
@@ -374,7 +374,6 @@
                 left: 0;
                 top: -15px;
             }
-            &:hover { margin-top: -5px; }
         }
 
         &.tlypageguide_right {
@@ -385,7 +384,6 @@
                 left: -15px;
                 top: 0;
             }
-            &:hover { margin-left: -5px; }
         }
 
         &.tlypageguide_left {
@@ -396,7 +394,6 @@
                 right: -15px;
                 top: 0;
             }
-            &:hover { margin-left: 5px; }
         }
 
         &.tlypageguide_top {
@@ -407,7 +404,6 @@
                 bottom: -15px;
                 left: 0;
             }
-            &:hover { margin-top: 5px; }
         }
 
         &:hover {
